<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryGray"
    tools:context=".feature.home_login.HomeLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/wave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_ellipse_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="228dp"
                android:layout_height="0dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/images"
                app:layout_constraintBottom_toBottomOf="@+id/wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,ImageContrastCheck" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wave">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textSemi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:gravity="start"
                    android:text="@string/text_ingresa_cuenta"
                    android:textColor="@color/accentBlack"
                    android:textSize="13sp"
                    app:fontFamily="@font/primary_regular" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:hint="@string/usuario"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="12dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    android:textColorHint="@color/hintGray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:textColor="@color/black_text"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="12dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    android:textColorHint="@color/hintGray"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:inputType="textPassword"
                        android:textColor="@color/black_text"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/selector_button_primary"
                    android:enabled="false"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:stateListAnimator="@null"
                    android:text="@string/ingresar"
                    android:textAllCaps="false"
                    android:textColor="@color/selector_button_text"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <include
        android:id="@+id/view_loading"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>